adding buildings and ditstance between building and lot relation table, and updatinh openapi with the infO
